# TransformerUQ

./: .gitignore  README.md  acquisition_func.py  aquisition_func.py  bayesformer.ipynb  beam_search.py  collate.py  concrete-play.ipynb  constants.py  dataloader.py  generate.py  generate_with_uq.py  gpt2.ipynb  hyperparameters.py  interactive_plot.ipynb  iwslt14.ipynb  main.py  ood_nl_testing.py  play.ipynb  plot_test.py  pyproject.toml  start.sh  start.slurm  streaming_parallell_dataset.py  test-uq.slurm  test_model.py  tokenizer.py  tokens_to_tensor.py  train.py  validate.py  vocab.py  wat_zei_je_download_data.ipynb  wat_zei_je_download_data.py  wmt14.ipynb
.github/workflows/: python-checks.yml
EnDeTransformer/: beam_search.py  constants.py  generate.py  hyperparameters.py  main.py  test_model.py  train.py  validate.py
EnDeTransformer/data_processing/: dataloader.py  streaming_parallell_dataset.py  tokenizer.py  vocab.py  wat_zei_je_download_data.py
EnDeTransformer/models/: bayesformer.py  transformer.py  transformer_model.py
EnDeTransformer/uq/: acquisition_func.py  generate_with_uq.py  ood_nl_testing.py  plot_uq.py  test_model_uq.py  validate_uq.py
EnDeTransformer/utils/: checkpoints.py  print_random_generated_sentences.py
GPT2/: gpt2.ipynb  gpt2_generate.py  gpt2_hellaswag.py  gpt2model.py
data_processing/: dataloader.py  streaming_parallell_dataset.py  tokenizer.py  vocab.py  wat_zei_je_download_data.py
data_processing/iwslt/: pyproject.toml
gpt2project/: bayesformer_gpt.py  constants.py  dataloader.py  ddp.py  dpp.py  dropout_embedding.py  evaluate_model.py  fineweb.py  gpt2.ipynb  gpt2_commongen.py  gpt2_generate.py  gpt2_hellaswag.py  gpt2_squad.py  gpt2model.py  gpt_commongen_uq.py  gpt_generate_hellaswag.py  hyperparameters.py  search_methods_gpt.py  start-uq.slurm  start.slurm  train.py
gpt2project/uq/: plot_test.py  (+10 more)
models/: bayesformer.py  concrete_dropout.py  masks.py  transformer.py  transformer_model.py  transformer_pytorch.py
shared/: dropout_embedding.py
tests/: checkpoint_test.py  conftest.py  test_gpt_model.py  uq_test.py
uq/: acquisition_func.py  generate_with_uq.py  ood_nl_testing.py  plot_combined_curve.py  plot_uq.py  test_model_uq.py  validate_uq.py
utils/: checkpoints.py  general_plotter.py  print_random_generated_sentences.py
(+26 files in other folders)
