[tool.poetry]
name = "transformeruq"
version = "0.1.0"
description = ""
authors = ["Sondre Sørbye <sondre@magson.no>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.2.2"
nltk = "^3.9.1"
sacremoses = "^0.1.1"
subword-nmt = "^0.3.8"
requests = "^2.32.3"
bs4 = "^0.0.2"
sacrebleu = "^2.5.1"
wandb = "^0.19.4"
types-requests = "^2.32.0.20241016"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
pytest = "^8.3.4"
sentence-transformers = "^3.4.1"
transformers = "^4.49.0"
tiktoken = "^0.9.0"
ipywidgets = "^8.1.5"
datasets = "^3.3.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.black]
exclude = "venv/"